# mutff

./: CMakeLists.txt  Doxyfile.in  README.md
.github/actions/coverage/: action.yml
.github/actions/coverage-badge/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  deploy-docs.yml  static-analysis.yml  test.yml
include/: mutff.h  mutff_core.h  mutff_default.h  mutff_error.h  mutff_io.h  mutff_stdlib.h
src/: mutff.c  mutff_core.c  mutff_default.c  mutff_io.c  mutff_stdlib.c
tests/: CMakeLists.txt  mutff_test.cpp  test.mov
